footer responsive problem solve

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <section id="footer">
       <div class="container fPartTop">
         <div class="row footerFlex">
-          <div class="col-lg-5 w50">
+          <div class="col-lg-5">
             <div class="footerPartLeft">
               <img
                 width="250"
@@ -412,7 +412,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 ms-auto w50">
+          <div class="col-lg-4 ms-auto">
             <div class="footerPartRight">
               <a href="#"
                 ><i class="fa-regular fa-envelope"></i>inquiry@portostar.com</a
