--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 w50">
-            <div class="counterItem">
+            <div style="padding-bottom: 20px;" class="counterItem">
               <h3>100+</h3>
               <h5>PROJECTS</h5>
             </div>
           </div>
-          <div class="col-lg-3 w50">
+          <div style="padding-bottom: 20px;" class="col-lg-3 w50">
             <div class="counterItem">
               <h3>24</h3>
               <h5>WINNING AWARD</h5>
